--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 html, body {
     height: 100%;
 	background-color: #212121;
+	text-align: center;
 }
 
-.cirrus-white {
+.cirrus-white, h1 {
 	color: #FAFAFA;
 }
